UI Changes and Prompt+Speed Improvement

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <div class="flex flex-col items-center justify-center h-screen  border-amber-50 border-2 "> 
+  <div class="flex flex-col min-w-2xl items-center justify-center h-screen  border-amber-50 border-2 "> 
     <!-- Entire screen -->
 
     <div id="chatBox" class=" h-9/10 w-2/3 rounded-2xl p-5 text-amber-100 overflow-auto"> 
