--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
 
 <body>
 
-  <div class="flex flex-col min-w-2xl items-center justify-center h-screen  border-amber-50 border-2 "> 
+  <div class="flex flex-col min-w-2xl items-center justify-center h-screen   ">
     <!-- Entire screen -->
 
-    <div id="chatBox" class=" h-9/10 w-2/3 rounded-2xl p-5 text-amber-100 overflow-auto"> 
-    <!-- The Chat Box the message from bot and user get appended here-->
+    <div id="chatBox" class=" h-9/10 w-2/3 rounded-2xl p-5 text-amber-100 overflow-auto">
+      <!-- The Chat Box the message from bot and user get appended here-->
     </div>
 
     <!-- The below is the text area and its in a div because the entire screen 
           has two divs with flex-col so you know the text area stays at bottom 
           also we have the submit button here too-->
     <div class=" flex flex-col w-2/3">
-      <textarea id="textArea"
-        class="border text-amber-50 bg-zinc-800 border-gray-300 p-2 rounded-md focus:outline-none focus:ring-2 resize-none"
-        rows="4" placeholder="Enter your message..."></textarea>
-
+      <div class="relative">
+        <textarea id="textArea"
+          class="w-full  border text-amber-50 bg-zinc-800 border-gray-300 p-2 rounded-md focus:outline-none focus:ring-2 resize-none"
+          rows="4" placeholder="Enter your message..."></textarea>
+        <div class=" absolute duration-300 hover:scale-105  hover:bg-slate-950 h-12 w-12 right-4 top-8 p-2 rounded-full">
+          <img id="micIcon" class="" src="" alt="">
+        </div>
+      </div>
       <button id="submitBtn"
         class="bg-transparent w-20 self-end hover:bg-blue-500  text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
         Submit
@@ -33,6 +37,7 @@
   </div>
 
   <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./src/asr.js"> </script>
 </body>
 
 </html>
